# HackTheChange2025

./: README.md
Backend-HTC2025/: .gitignore  alembic.ini  docker-compose.yml  pyproject.toml
Backend-HTC2025/alembic/: env.py
Backend-HTC2025/alembic/versions/: 01f90ea05cc1_opportunities.py  ef1ad8ca0ea6_auth.py  fecf967201a3_friendships.py
Backend-HTC2025/app/: __init__.py  api.py  config.py
Backend-HTC2025/app/core/: dynamodb.py
Backend-HTC2025/app/database/: postgres.py
Backend-HTC2025/app/dependencies/: __init__.py  auth.py  firebase.py  opportunity.py  users.py
Backend-HTC2025/app/integrations/: __init__.py  firebase.py
Backend-HTC2025/app/models/: friendrequests.py  friendships.py  opportunities.py  savedopportunities.py  user.py
Backend-HTC2025/app/routes/: __init__.py  auth.py  friends.py  opportunity.py
Backend-HTC2025/app/schemas/: __init__.py  auth.py  friends.py  opportunity.py
Backend-HTC2025/app/services/: auth.py  friends.py  opportunity.py  users.py
Backend-HTC2025/scripts/: firebase_client_simulator.py
frontend-htc2025/: package-lock.json  package.json  pnpm-lock.yaml
frontend-htc2025/app/: globals.css  layout.tsx  page.tsx
frontend-htc2025/app/components/: AppHeaderWrapper.tsx  DistanceSlider.tsx  FavoritesList.tsx  FriendsList.tsx  FriendsPanel.tsx  LeftSidebar.tsx  LocationSearch.tsx  Map.tsx  RightSidebar.tsx  SwipeView.tsx  WelcomeModal.tsx  app-header.tsx
frontend-htc2025/app/context/: AuthContext.tsx  FavoritesContext.tsx  OpportunityContext.tsx
frontend-htc2025/lib/: firebase.ts
(+3 files in other folders)
