[project]
name = "backend-htc2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.69",
    "fastapi>=0.121.0",
    "firebase-admin>=7.1.0",
    "google-auth>=2.43.0",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
]
